Added the ability to start the server